heroku deployment docker

--- a/pdfinvert/wsgi/views/main.html
+++ b/pdfinvert/wsgi/views/main.html
@@ -15,7 +15,7 @@
     <div>
         <h1>Free Online PDF Colour Inverter</h1>
 
-        <p>Upload a PDF file to invert</p>
+        <p>Upload a PDF file to invert its colour</p>
 
         <form enctype="multipart/form-data" action="/convert" method="POST">
             Choose a file to upload: <input name="uploadedfile" type="file"/><br/>
