--- a/pdfinvert/wsgi/views/2x2.html
+++ b/pdfinvert/wsgi/views/2x2.html
@@ -9,7 +9,6 @@
 <a href="https://github.com/keotl/pdf-colour-invert"><img style="position: absolute; top: 0; left: 0; border: 0;"
                                                           src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"
                                                           alt="Fork me on GitHub"></a>
-
 <div style="position:absolute; right:0; top: 0;">
     <a href="/">Invert Colour</a>
     <a href="/2x2">Convert a PDF to 2x2</a>
@@ -17,11 +16,11 @@
 
 <div style="display: flex; flex-direction: row; justify-content: center; margin-top: 20vh;">
     <div>
-        <h1>Free Online PDF Colour Inverter</h1>
+        <h1>Free Online PDF 2x2 concatenator </h1>
 
-        <p>Upload a PDF file to invert its colour</p>
+        <p>Upload a PDF file to create a 2x2 concatenated pdf</p>
 
-        <form enctype="multipart/form-data" action="/convert" method="POST">
+        <form enctype="multipart/form-data" action="/2x2" method="POST">
             Choose a file to upload: <input name="uploadedfile" type="file"/><br/>
             <input type="submit" value="Upload File"/>
         </form>
