--- a/pdfinvert/wsgi/views/main.html
+++ b/pdfinvert/wsgi/views/main.html
@@ -27,6 +27,9 @@
         </form>
     </div>
 </div>
-
+<footer style="position: absolute; bottom: 0; font-size: x-small;">
+    <p>Powered by <a href="https://docs.jivago.io">Jivago</a></p>
+    <p>Built with &#9829; by <a href="https://github.com/keotl">Kento A. Lauzon</a></p>
+</footer>
 </body>
 </html>
