lower DPI by default

--- a/pdfinvert/wsgi/views/main.html
+++ b/pdfinvert/wsgi/views/main.html
@@ -25,6 +25,10 @@
             Choose a file to upload: <input name="uploadedfile" type="file"/><br/>
             <input type="submit" value="Upload File"/>
         </form>
+
+        <p style="padding-top: 30px">
+            Processing may take several minutes to complete for large files.
+        </p>
     </div>
 </div>
 <footer style="position: absolute; bottom: 0; font-size: x-small;">
