change DPI presets

--- a/pdfinvert/wsgi/views/main.html
+++ b/pdfinvert/wsgi/views/main.html
@@ -108,7 +108,7 @@
     <p>Built with &#9829; by <a href="https://github.com/keotl">Kento A. Lauzon</a></p>
 </footer>
 <script>
-    const DPI_SETTINGS = [[50, "Low (Fast)"], [100, "Normal"], [125, "High"], [175, "Ultra (Slow)"]]
+    const DPI_SETTINGS = [[50, "Low (Fastest)"], [100, "Normal"], [125, "High"], [160, "Very High"], [192, "Ultra (Slowest)"]]
 
     const submitButton = document.getElementById("submit-button");
     const selectFileButton = document.getElementById("upload-button");
